better boolean constructor (travis-ci request)